07-istio/urlrule/app-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp-v2
spec:
  hosts:
  - myapp
  http:
  - match:
    - uri:
        prefix: "/papi"
    - uri:
        prefix: "/bw"
    route:
    - destination:
        host: myapp
        subset: v2
      weight: 50
  - route:
    - destination:
        host: myapp
        subset: v1
      weight: 50
    retries:
      attempts: 3
      perTryTimeout: 0.01s
